--- a/app/src/main/res/layout/item_expand_glass.xml
+++ b/app/src/main/res/layout/item_expand_glass.xml
@@ -17,8 +17,7 @@
             android:layout_marginEnd="5dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/rectangle_expand_on" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/iv_big_human"
