--- a/app/src/main/res/layout/activity_write.xml
+++ b/app/src/main/res/layout/activity_write.xml
@@ -30,6 +30,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="게시글 작성"
+                android:fontFamily="@font/cafe24ssurround"
                 android:textColor="@color/custom_black"
                 android:textSize="14sp"
                 android:textStyle="bold"
